change to lower case

--- a/judaismimages/tempFiles/page2.html
+++ b/judaismimages/tempFiles/page2.html
@@ -70,8 +70,8 @@ table tr.alt td,table tr.alt th{background-color:#ebebeb;}
   </div> 
   <div id="details-right"> 
    <table border="0" cellpadding="0" cellspacing="0"> 
-    <tr class="alt"><th>Requested URL</th><td>http://judaismshop.com:80/judaismImages/tempFiles/page2.pdf</td></tr> 
-    <tr><th>Physical Path</th><td>c:\inetpub\wwwroot\judaismImages\tempFiles\page2.pdf</td></tr> 
+    <tr class="alt"><th>Requested URL</th><td>http://judaismshop.com:80/judaismimages/tempFiles/page2.pdf</td></tr> 
+    <tr><th>Physical Path</th><td>c:\inetpub\wwwroot\judaismimages\tempFiles\page2.pdf</td></tr> 
     <tr class="alt"><th>Logon Method</th><td>Anonymous</td></tr> 
     <tr><th>Logon User</th><td>Anonymous</td></tr> 
      
