--- a/judaismimages/Heb/pdf/INSTALL_heb/INSTALL.html
+++ b/judaismimages/Heb/pdf/INSTALL_heb/INSTALL.html
@@ -70,8 +70,8 @@ table tr.alt td,table tr.alt th{background-color:#ebebeb;}
   </div> 
   <div id="details-right"> 
    <table border="0" cellpadding="0" cellspacing="0"> 
-    <tr class="alt"><th>Requested URL</th><td>http://judaismshop.com:80/JudaismImages/Heb/pdf/INSTALL_heb/INSTALL.pdf</td></tr> 
-    <tr><th>Physical Path</th><td>c:\inetpub\wwwroot\JudaismImages\Heb\pdf\INSTALL_heb\INSTALL.pdf</td></tr> 
+    <tr class="alt"><th>Requested URL</th><td>http://judaismshop.com:80/judaismimages/Heb/pdf/INSTALL_heb/INSTALL.pdf</td></tr> 
+    <tr><th>Physical Path</th><td>c:\inetpub\wwwroot\judaismimages\Heb\pdf\INSTALL_heb\INSTALL.pdf</td></tr> 
     <tr class="alt"><th>Logon Method</th><td>Anonymous</td></tr> 
     <tr><th>Logon User</th><td>Anonymous</td></tr> 
      
