--- a/judaismimages/guide_heb/11_15/16FULLPL.html
+++ b/judaismimages/guide_heb/11_15/16FULLPL.html
@@ -70,8 +70,8 @@ table tr.alt td,table tr.alt th{background-color:#ebebeb;}
   </div> 
   <div id="details-right"> 
    <table border="0" cellpadding="0" cellspacing="0"> 
-    <tr class="alt"><th>Requested URL</th><td>http://judaismshop.com:80/JudaismImages/guide_heb/11_15/16FULLPL.pdf</td></tr> 
-    <tr><th>Physical Path</th><td>c:\inetpub\wwwroot\JudaismImages\guide_heb\11_15\16FULLPL.pdf</td></tr> 
+    <tr class="alt"><th>Requested URL</th><td>http://judaismshop.com:80/judaismimages/guide_heb/11_15/16FULLPL.pdf</td></tr> 
+    <tr><th>Physical Path</th><td>c:\inetpub\wwwroot\judaismimages\guide_heb\11_15\16FULLPL.pdf</td></tr> 
     <tr class="alt"><th>Logon Method</th><td>Anonymous</td></tr> 
     <tr><th>Logon User</th><td>Anonymous</td></tr> 
      
